--- a/styles/QuizForm.module.scss
+++ b/styles/QuizForm.module.scss
@@ -5,7 +5,7 @@
 .form {
   background-color: rgb(243, 222, 237);
   color: black;
-  padding: 5px;
+  padding: 0;
   height: 100%;
   flex-grow: 1;
   text-align: left;
