--- a/styles/Faq.module.scss
+++ b/styles/Faq.module.scss
@@ -1,21 +1,50 @@
 @import 'variables';
+
 .faqContainer {
-  @media (min-width: 450px) {
+  padding-top: 2rem;
+  margin: 0 1rem;
+
+  @media (min-width: 760px) {
+    width: 90%;
+    margin: 0 auto;
+  }
+  @media (min-width: 1500px) {
     width: 70%;
     margin: 0 auto;
   }
-}
-
-.list {
-  padding-left: 0;
-  li {
-    list-style: none;
-    p {
-      padding: 5px;
+  h1 {
+    font-size: 2rem;
+    font-family: $fontHeader;
+    @media (min-width: 1500px) {
+      text-align: center;
     }
   }
 
-  > h1 {
-    font-size: $headlineFontSize;
+  .list {
+    margin-top: 3rem;
+    padding-left: 0;
+    font-size: 1rem;
+
+    @media (min-width: 1500px) {
+      width: 70%;
+      margin: 0 auto;
+    }
+    li {
+      list-style: none;
+    }
   }
 }
+
+// .list {
+//   padding-left: 0;
+//   li {
+//     list-style: none;
+//     p {
+//       padding: 5px;
+//     }
+//   }
+
+//   > h1 {
+//     font-size: $headlineFontSize;
+//   }
+// }
