--- a/styles/Privacy.module.scss
+++ b/styles/Privacy.module.scss
@@ -1,18 +1,34 @@
 @import 'variables';
+
 .privacyContainer {
-  @media (min-width: 450px) {
+  padding-top: 2rem;
+  margin: 0 1rem;
+  @media (min-width: 760px) {
+    width: 90%;
+    margin: 0 auto;
+  }
+  @media (min-width: 1500px) {
     width: 70%;
     margin: 0 auto;
   }
-}
+  h1 {
+    font-size: 2rem;
+    font-family: $fontHeader;
+    @media (min-width: 1500px) {
+      text-align: center;
+    }
+  }
+  .list {
+    margin-top: 3rem;
+    padding-left: 0;
+    font-size: 1rem;
 
-.list {
-  padding-left: 0;
-
-  li {
-    list-style: none;
-    p {
-      padding: 5px;
+    @media (min-width: 1500px) {
+      width: 70%;
+      margin: 0 auto;
+    }
+    li {
+      list-style: none;
     }
   }
 }
