--- a/styles/LandingPageAboutUs.module.scss
+++ b/styles/LandingPageAboutUs.module.scss
@@ -30,5 +30,9 @@
     position: absolute;
     top: 30%;
     right: 50%;
+
+    // @media (min-width: 460px) {
+    //   font-size: 1rem;
+    // }
   }
 }
