--- a/styles/ProductTeaser.module.scss
+++ b/styles/ProductTeaser.module.scss
@@ -1,6 +1,9 @@
+@import 'variables';
+
 .productTeaser {
   color: aliceblue;
   height: 100%;
+
   .content {
     height: 100%;
   }
@@ -14,6 +17,7 @@
   img {
     max-width: 100%;
     height: auto;
+    padding: 10px;
   }
   @media (min-width: 1700px) {
     width: 70%;
