--- a/styles/Terms.module.scss
+++ b/styles/Terms.module.scss
@@ -1,24 +1,36 @@
 @import 'variables';
 
 .termsContainer {
-  @media (min-width: 450px) {
+  padding-top: 2rem;
+  margin: 0 1rem;
+
+  @media (min-width: 760px) {
+    width: 90%;
+    margin: 0 auto;
+  }
+  @media (min-width: 1500px) {
     width: 70%;
     margin: 0 auto;
   }
-}
 
-.list {
-  padding-left: 0;
-  border-top: 0.01px solid $borderLight;
-  border-bottom: 0.01px solid $borderLight;
+  h1 {
+    font-size: 2rem;
+    font-family: $fontHeader;
+    @media (min-width: 1500px) {
+      text-align: center;
+    }
+  }
+  .list {
+    margin-top: 3rem;
+    padding-left: 0;
+    font-size: 1rem;
 
-  li {
-    list-style: none;
-    p {
-      ul {
-        padding: 0;
-      }
-      padding: 5px;
+    @media (min-width: 1500px) {
+      width: 70%;
+      margin: 0 auto;
+    }
+    li {
+      list-style: none;
     }
   }
 }
