--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -66,7 +66,8 @@
   display: none;
   position: relative;
   width: 100%;
-  color: aliceblue !important;
+  color: $textWhite !important;
+
   @media (min-width: 760px) {
     margin: 0 auto;
     display: flex;
