--- a/styles/Quiz.module.scss
+++ b/styles/Quiz.module.scss
@@ -5,67 +5,71 @@
     width: 70%;
     margin: 0 auto;
   }
-}
-
-.question {
-  text-align: center;
-  color: $textBlack;
-  font-size: xx-large;
-}
-.invitation {
-  text-align: center;
-  padding: 0 5px 0 5px;
-  font-size: x-large;
-}
-.result {
-  svg {
-    color: $borderLight;
-  }
-  svg:hover,
-  svg:focus {
-    color: $primary;
-  }
-  :global(.ant-result-title) {
-    color: $textWhite;
-    margin: 5px;
-  }
-  :global(.ant-result-subtitle) {
-    font-size: 20px;
-    color: $textWhite;
-    margin: 5px;
-  }
-  :global(.ant-result-extra > *:last-child) {
-    background-color: $borderLight;
-    border: $borderLight;
-    color: $textBlack;
-    width: 5rem;
-    font-family: $fontText;
+  .quest {
     text-align: center;
-    padding: 0;
-    margin: 15px;
+    .question {
+      text-align: center;
+      color: $textWhite;
+      font-size: xx-large;
+    }
+    .invitation {
+      text-align: center;
+      padding: 0 5px 0 5px;
+      font-size: x-large;
+    }
   }
-  :global(.ant-result-extra > *:last-child:hover) {
-    background-color: rgb(136, 129, 175);
-    color: $textWhite;
-    font-family: $fontText;
-    text-align: center;
-    padding: 0;
-    margin: 15px;
-  }
-  :global(.ant-btn-primary) {
-    background-color: $borderLight;
-    border: $borderLight;
-    color: $textBlack;
-    width: 5rem;
-    font-family: $fontText;
-    padding: 0;
-    margin: 15px;
-  }
-  :global(.ant-btn-primary:hover) {
-    background-color: rgb(136, 129, 175);
-    color: $textWhite;
-    font-family: $fontText;
-    padding: 0;
-    margin: 15px !important;
+  .result {
+    svg {
+      color: $borderLight;
+    }
+    svg:hover,
+    svg:focus {
+      color: $primary;
+    }
+    :global(.ant-result-title) {
+      color: $textWhite;
+      margin: 5px;
+    }
+    :global(.ant-result-subtitle) {
+      font-size: 20px;
+      color: $textWhite;
+      margin: 5px;
+    }
+    :global(.ant-result-extra > *:last-child) {
+      background-color: $borderLight;
+      border: $borderLight;
+      color: $textBlack;
+      width: 5rem;
+      font-family: $fontText;
+      text-align: center;
+      padding: 0;
+      margin: 15px;
+      width: 7rem;
+    }
+    :global(.ant-result-extra > *:last-child:hover) {
+      background-color: rgb(136, 129, 175);
+      color: $textWhite;
+      font-family: $fontText;
+      text-align: center;
+      padding: 0;
+      margin: 15px;
+    }
+    :global(.ant-btn-primary) {
+      background-color: $borderLight;
+      border: $borderLight;
+      color: $textBlack;
+      width: 5rem;
+      font-family: $fontText;
+      padding: 0;
+      margin: 15px;
+      width: 7rem;
+    }
+    :global(.ant-btn-primary:hover) {
+      background-color: rgb(136, 129, 175);
+      color: $textWhite;
+      font-family: $fontText;
+      padding: 0;
+      margin: 15px !important;
+    }
   }
 }
