--- a/styles/QuizNavBar.module.scss
+++ b/styles/QuizNavBar.module.scss
@@ -6,10 +6,16 @@
   background-color: rgb(136, 129, 175);
   :global(button.ant-btn) {
     background-color: rgb(136, 129, 175);
-    color: black;
+    color: $textWhite;
+    font-family: $fontText;
   }
   :global(button.ant-btn:hover) {
     background-color: rgb(174, 168, 206);
-    color: black;
+    color: $textWhite;
+    font-family: $fontText;
+  }
+  div {
+    color: $textWhite;
+    font-family: $fontText;
   }
 }
