--- a/styles/ShopList.module.scss
+++ b/styles/ShopList.module.scss
@@ -3,6 +3,13 @@
 .shopListContainer {
   .container {
     padding: 15px;
+
+    @media (min-width: 640px) {
+      padding: 15px;
+      min-width: 50%;
+      flex: 1;
+      margin: 0;
+    }
   }
   @media (min-width: 1700px) {
     width: 70%;
@@ -16,12 +23,6 @@
     align-content: center;
     align-items: baseline;
     align-self: center;
-    .container {
-      padding: 15px;
-      min-width: 50%;
-      flex: 1;
-      margin: 0;
-    }
   }
   img {
     box-shadow: 0 12px 14px rgba(0, 0, 0, 0.15);
