--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -5,7 +5,7 @@
 
   @media (min-width: 760px) {
     margin: 0 auto;
-    display: flex;
+    display: none;
     width: 70%;
   }
   > div {
@@ -63,6 +63,7 @@
   }
 }
 .mainDesctop {
+  display: none;
   position: relative;
   width: 100%;
   color: aliceblue !important;
