--- a/styles/HeaderContent.module.scss
+++ b/styles/HeaderContent.module.scss
@@ -55,7 +55,7 @@
   display: block;
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 4.5rem 0 0 0;
   height: 100%;
   z-index: 100;
   font-family: $fontHeader;
