--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: $primary;
+  font-size: 1.5rem;
   @media (min-width: 760px) {
     height: 3rem;
   }
@@ -38,6 +39,9 @@
     .btnContainer {
       display: flex;
       justify-content: center;
+      a {
+        color: $textWhite;
+      }
     }
 
     @media (min-width: 760px) {
@@ -55,8 +59,8 @@
       display: flex;
       align-items: center;
       svg {
-        width: 1rem;
-        height: 1rem;
+        width: 1.5rem;
+        height: 1.5rem;
         z-index: 2;
       }
     }
@@ -67,8 +71,8 @@
     align-items: center;
     position: relative;
     svg {
-      width: 1.4rem;
-      height: 1.4rem;
+      width: 2rem;
+      height: 2rem;
       padding-right: 10px;
     }
 
@@ -81,14 +85,14 @@
     position: relative;
     background-color: #ff38b3;
     overflow: hidden;
-    height: 1rem;
-    width: 1rem;
-    line-height: 1rem;
+    height: 1.2rem;
+    width: 1.2rem;
+    // line-height: 1rem;
     border-radius: 50%;
     text-align: center;
-    font-size: 10px;
+    font-size: 1rem;
 
-    bottom: 6px;
+    bottom: 3px;
     right: 6px;
     z-index: -2;
     color: white;
