--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -2,7 +2,8 @@
 
 .mainMobile {
   position: relative;
-
+  padding-top: 3rem;
+  font-size: 1rem;
   @media (min-width: 760px) {
     margin: 0 auto;
     display: none;
@@ -15,7 +16,7 @@
 
   :global(.slick-arrow) {
     cursor: pointer;
-
+    font-size: 1rem;
     &:global(.slick-prev) {
       &::before {
         position: relative;
