--- a/styles/ShopList.module.scss
+++ b/styles/ShopList.module.scss
@@ -1,11 +1,14 @@
 @import 'variables';
 
 .shopListContainer {
+  padding-top: 3rem;
+  h1 {
+    font-size: 2rem;
+  }
   .container {
     padding: 15px;
 
     @media (min-width: 640px) {
-      padding: 15px;
       min-width: 50%;
       flex: 1;
       margin: 0;
