--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -9,7 +9,7 @@
   background-color: $primary;
   font-size: 1.5rem;
   @media (min-width: 760px) {
-    height: 3rem;
+    height: 5rem;
   }
   .logo {
     margin: 0.5rem;
@@ -54,7 +54,6 @@
     align-items: center;
     color: white;
     height: 100%;
-    // position: relative;
     div {
       display: flex;
       align-items: center;
@@ -87,8 +86,9 @@
     overflow: hidden;
     height: 1.2rem;
     width: 1.2rem;
-    // line-height: 1rem;
-    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;    border-radius: 50%;
     text-align: center;
     font-size: 1rem;
 
