--- a/styles/ProductDetail.module.scss
+++ b/styles/ProductDetail.module.scss
@@ -1,14 +1,17 @@
 @import 'variables';
 .productDetail {
+  display: flex;
+  flex-direction: column;
+  h1 {
+    font-size: 1rem;
+  }
   .topSection {
     margin-bottom: 15px;
     img {
       width: 50rem;
       box-shadow: 0 6px 7px rgba(0, 0, 0, 0.15);
     }
-    h1 {
-      font-size: 1rem;
-    }
+
     text-align: center;
   }
   .selectWrapper {
@@ -24,5 +27,11 @@
   }
   p {
     text-align: left;
+  }
+  .snipcartAddItem {
+    margin: auto;
+    button:disabled {
+      cursor: not-allowed;
+    }
   }
 }
