--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -10,6 +10,7 @@
   font-size: 1.5rem;
   @media (min-width: 760px) {
     height: 5rem;
+    font-size: 1.2rem;
   }
   .logo {
     margin: 0.5rem;
@@ -88,7 +89,8 @@
     width: 1.2rem;
     display: flex;
     align-items: center;
-    justify-content: center;    border-radius: 50%;
+    justify-content: center;
+    border-radius: 50%;
     text-align: center;
     font-size: 1rem;
 
