--- a/styles/ShopList.module.scss
+++ b/styles/ShopList.module.scss
@@ -1,7 +1,6 @@
 @import 'variables';
 
-.shopList {
-
+.shopListContainer {
   h1 {
     font-size: 3rem;
 
@@ -9,12 +8,7 @@
     padding: 0.5rem;
     color: white;
   }
-  .shopListContainer {
-
-    h1 {
-      font-size: 2rem;
-    }
-
+  .main {
     .container {
       padding: 15px;
 
@@ -24,7 +18,6 @@
         margin: 0;
       }
     }
-
     @media (min-width: 1700px) {
       width: 70%;
       margin: 0 auto;
@@ -38,7 +31,6 @@
       align-items: baseline;
       align-self: center;
     }
-
     img {
       box-shadow: 0 12px 14px rgba(0, 0, 0, 0.15);
     }
